# ELF_RSS

./: .env  .env.dev  .env.prod  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  bot.py  config.py  databaseDrivers.xml  db_migrate.py  env  filetypes.xml  find.xml  github.xml  install.sh  proxy.settings.xml  pyproject.toml  requirements.txt  run.py  setup.py  wsl.distributions.xml
.github/: dependabot.yml  renovate.json
.github/ ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/.github/ ISSUE_TEMPLATE/:  ask_for_help.md  config.yml
.github/ISSUE_TEMPLATE/: ask-for-help.md  ask_for_help.md  bug_report.md  bug_report.yml  feature_request.md  feature_request.yml
.github/workflows/: ChangeLog.yml  Changelog.yml  main.yml  python-publish.yml
docs/: 1.0 使用教程.md  2.0 使用教程.md  README.md  功能介绍.md  常见问题.md  更新日志.md  迁移到 go-cqhttp.md  部署教程.md
include/plugins/: add_dy.py  change_dy.py  del_dy.py  iurls.py  show_all.py  show_dy.py  start.py
include/plugins/RSSHub/: RSS_class.py  RWlist.py  del_cache.py  encodeJson.py  rss_baidutrans.py  rsshub.py  rsstrigger.py
keymaps/: Windows Proper Redo.xml
src/plugins/: __init__.py
src/plugins/ELF_RSS2/: __init__.py  add_cookies.py  add_dy.py  bot_info.py  change_dy.py  config.py  del_dy.py  globals.py  my_trigger.py  patch.py  permission.py  pikpak_offline.py  qbittorrent_download.py  rss_class.py  rss_parsing.py  show_all.py  show_dy.py  start.py  upload_group_file.py  utils.py
src/plugins/ELF_RSS2/RSS/: delete_cache.py  my_trigger.py  qbittorrent_download.py  rss_class.py  rss_parsing.py  translation_baidu.py  util.py
src/plugins/ELF_RSS2/RSS/routes/: __init__.py  danbooru.py  nga.py  pixiv.py  south-plus.py  south_plus.py  twitter.py  weibo.py  yande_re.py  youtube.py
src/plugins/ELF_RSS2/RSS/routes/Parsing/: __init__.py  cache_manage.py  check_update.py  download_torrent.py  duplicate_filter.py  handle_date.py  handle_html_tag.py  handle_images.py  handle_translation.py  read_or_write_rss_data.py  send_message.py  utils.py  write_rss_data.py
src/plugins/ELF_RSS2/RSSHUB/: RSS_Parsing.py  RSS_class.py  del_cache.py  qbittorrent_download.py  rss_baidutrans.py  rsshub.py  rsstrigger.py  test.py
src/plugins/ELF_RSS2/command/: __init__.py  add_cookies.py  add_dy.py  change_dy.py  del_dy.py  rsshub_add.py  show_all.py  show_dy.py  upload_group_file.py
src/plugins/ELF_RSS2/command/telegram_command/: __init__.py  change.py  query.py  start.py  telegram_command.py
src/plugins/ELF_RSS2/parsing/: __init__.py  cache_manage.py  check_update.py  download_torrent.py  handle_html_tag.py  handle_images.py  handle_translation.py  parsing_rss.py  send_message.py  utils.py
src/plugins/ELF_RSS2/parsing/routes/: __init__.py  bilibili.py  danbooru.py  nga.py  pixiv.py  south_plus.py  twitter.py  weibo.py  yande_re.py  youtube.py
src/plugins/ELF_RSS2/plugins/: add_cookies.py  add_dy.py  change_dy.py  del_dy.py  show_all.py  show_dy.py  start.py
src/plugins/ELF_RSS2/plugins/RSSHUB/: RSS_Parsing.py  RSS_class.py  RWlist.py  __init__.py  del_cache.py  qbittorrent_download.py  rss_baidutrans.py  rsshub.py  rsstrigger.py  test.py
src/plugins/ELF_RSS2/telegram/: __init__.py  start.py
src/plugins/ELF_RSS2/telegram/telegram_command/: __init__.py  change.py  permission.py  query.py  start.py  subscribe.py  telegram_command.py
src/plugins/ELF_RSS2/typings/: t_globals.py
src/plugins/ELF_URL/: __init__.py  elf_url.py  miyu.py  oneread.py
src/plugins/ELF_URL/plugins/: elf_url.py  miyu.py  oneread.py
tests/: test_globals.py
