[tool.poetry]
name = "ELF_RSS"
version = "2.6.15"
description = "QQ机器人 RSS订阅 插件，订阅源建议选择 RSSHub"
authors = ["Quan666 <i@Rori.eMail>"]
license = "GPL-3.0-only"
readme = "README.md"
packages = [
    { include = "ELF_RSS2", from = "src/plugins" },
]
homepage = "https://github.com/Quan666/ELF_RSS"
repository = "https://github.com/Quan666/ELF_RSS"
keywords = ["nonebot", "nonebot2", "rss" ,"elf" ,"rsshub"]

[tool.poetry.dependencies]
python = "^3.8.3"
aiohttp = {extras = ["speedups"], version = "^3.8.4"}
arrow = "^1.2.3"
bbcode = "^1.1.0"
cachetools = "^5.3.0"
emoji = "^2.2.0"
feedparser = "^6.0.10"
deep-translator = "^1.10.1"
ImageHash = "^4.3.1"
magneturi = "^1.3"
nonebot-adapter-onebot = "^2.2.2"
nonebot-plugin-apscheduler = "^0.2.0"
nonebot-plugin-guild-patch = "^0.2.3"
nonebot2 = "^2.0.0-rc.3"
pikpakapi = "^0.1.1"
Pillow = "^9.4.0"
pydantic = "^1.10.6"
pyquery = "^2.0.0"
python-qbittorrent = "^0.4.3"
tenacity = "^8.2.2"
tinydb = "^4.7.1"
typing-extensions = "^4.5.0"
yarl = "^1.8.2"

[tool.poetry.dev-dependencies]
nb-cli = "^1.0.5"

[tool.mypy]
python_version = "3.8"
ignore_missing_imports = true
implicit_reexport = true
pretty = true
show_error_codes = true
strict = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
