[tool.poetry]
name = "ELF_RSS"
version = "2.6.23"
description = "QQ机器人 RSS订阅 插件，订阅源建议选择 RSSHub"
authors = ["Quan666 <i@Rori.eMail>"]
license = "GPL-3.0-only"
readme = "README.md"
packages = [
    { include = "ELF_RSS2", from = "src/plugins" },
]
homepage = "https://github.com/Quan666/ELF_RSS"
repository = "https://github.com/Quan666/ELF_RSS"
keywords = ["nonebot", "nonebot2", "rss" ,"elf" ,"rsshub"]

[tool.poetry.dependencies]
python = "^3.12.5"
aiohttp = {extras = ["speedups"], version = "^3.10.4"}
arrow = "^1.3.0"
async-timeout = "^4.0.3"
bbcode = "^1.1.0"
cachetools = "^5.5.0"
emoji = "^2.12.1"
feedparser = "^6.0.11"
deep-translator = "^1.11.4"
ImageHash = "^4.3.1"
magneturi = "^1.3"
nonebot-adapter-onebot = "^2.4.4"
nonebot-plugin-apscheduler = "^0.5.0"
nonebot2 = {extras = ["fastapi"], version = "^2.3.3"}
pikpakapi = "^0.1.10"
Pillow = "^10.4.0"
pydantic = ">=1.10.17,<3.0.0,!=2.5.0,!=2.5.1"
pyquery = "^2.0.0"
python-qbittorrent = "^0.4.3"
tenacity = "^8.5.0"
tinydb = "^4.8.0"
yarl = "^1.9.4"

[tool.poetry.dev-dependencies]
nb-cli = "^1.4.1"

[tool.mypy]
python_version = "3.8"
plugins = [
    "pydantic.mypy"
]
ignore_missing_imports = true
implicit_reexport = true
pretty = true
show_error_codes = true
strict = true

[tool.ruff]
select = ["F", "E", "W", "I", "UP"]
target-version = "py38"
line-length = 120

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"*.py" = ["E402", "F811"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
